part4/logoutput/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: logoutput
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes: # Define volume
        - name: shared-image
          emptyDir: {}
      containers:
        - name: logoutputwriter
          image: tonip57/logoutputwriter
          readinessProbe:
            initialDelaySeconds: 20 # Initial delay until the readiness is tested
            periodSeconds: 30 # How often to test
            httpGet:
              path: /healthz
              port: 3301
          livenessProbe:
            initialDelaySeconds: 20 # Initial delay until the liveness is tested
            periodSeconds: 30 # How often to test
            httpGet:
              path: /healthz
              port: 3301
          resources:
            limits:
              cpu: "150m"
              memory: "100Mi"
          volumeMounts: # Mount volume
          - name: shared-image
            mountPath: /usr/src/app/files
            subPath: logoutput
        - name: logoutputreader
          image: tonip57/logoutputreader
          resources:
            limits:
              cpu: "150m"
              memory: "100Mi"
          volumeMounts: # Mount volume
          - name: shared-image
            mountPath: /usr/src/app/files
            subPath: logoutput
